--- a/upload/catalog/view/template/common/menu.twig
+++ b/upload/catalog/view/template/common/menu.twig
@@ -1,4 +1,4 @@
-{% if categories %}
+{% if categories != blank %}
   <div class="container">
     <nav id="menu" class="navbar navbar-expand-lg bg-primary">
       <div id="category" class="d-block d-sm-block d-lg-none">{{ text_category }}</div>
@@ -63,6 +63,8 @@
             {% endif %}
 
           {% endfor %}
+
+
         </ul>
       </div>
     </nav>
