--- a/upload/catalog/view/template/account/newsletter.twig
+++ b/upload/catalog/view/template/account/newsletter.twig
@@ -1,33 +1,19 @@
-{{ header }}
-<div id="account-newsletter" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-      <li class="breadcrumb-item"><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    <div id="content" class="col">{{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <form id="form-newsletter" action="{{ save }}" method="post" data-oc-toggle="ajax">
-        <fieldset>
-          <div class="row mb-3 mb-0">
-            <label class="col-md-3 col-form-label">{{ entry_newsletter }}</label>
-            <div class="col-md-9">
-              <x-switch name="newsletter" value="1" checked="{{ newsletter }}" input-id="input-newsletter" input-class="form-switch form-switch-lg"></x-switch>
-            </div>
-          </div>
-        </fieldset>
-        <div class="row">
-          <div class="col">
-            <a href="{{ back }}" class="btn btn-light">{{ button_back }}</a>
-          </div>
-          <div class="col text-end">
-            <button type="submit" class="btn btn-primary">{{ button_continue }}</button>
-          </div>
-        </div>
-      </form>
-      {{ content_bottom }}
+<h1>{{ heading_title }}</h1>
+<form id="form-newsletter" action="{{ save }}">
+  <fieldset>
+    <div class="row mb-3 mb-0">
+      <label class="col-md-3 col-form-label">{{ entry_newsletter }}</label>
+      <div class="col-md-9">
+        <x-switch name="newsletter" value="1" checked="{{ newsletter }}" input-id="input-newsletter" input-class="form-switch form-switch-lg"></x-switch>
+      </div>
     </div>
-    {{ column_right }}</div>
-</div>
-{{ footer }}
+  </fieldset>
+  <div class="row">
+    <div class="col">
+      <a href="{{ back }}" class="btn btn-light">{{ button_back }}</a>
+    </div>
+    <div class="col text-end">
+      <button type="submit" class="btn btn-primary">{{ button_continue }}</button>
+    </div>
+  </div>
+</form>
