--- a/upload/admin/view/template/design/template.twig
+++ b/upload/admin/view/template/design/template.twig
@@ -3,17 +3,17 @@
   <div class="page-header">
     <div class="container-fluid">
       <div class="float-end">
-        <button type="button" title="{{ button_filter }}" onclick="$('#filter-theme').toggleClass('d-none');" class="btn btn-light d-md-none d-lg-none"><i class="fa-solid fa-filter"></i></button>
+        <button type="button" title="{{ button_filter }}" onclick="$('#filter-template').toggleClass('d-none');" class="btn btn-light d-md-none d-lg-none"><i class="fa-solid fa-filter"></i></button>
         <a href="{{ add }}" title="{{ button_add }}" class="btn btn-primary"><i class="fa-solid fa-plus"></i></a>
         <div class="btn-group">
           <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-list-check"></i> {{ button_action }} <i class="fa-solid fa-caret-down fa-fw"></i></button>
           <ul class="dropdown-menu">
-            <li><button type="submit" form="form-theme" formaction="{{ enable }}" class="dropdown-item"><i class="fa-solid fa-toggle-on text-success"></i> {{ text_enable }}</button></li>
-            <li><button type="submit" form="form-theme" formaction="{{ disable }}" class="dropdown-item"><i class="fa-solid fa-toggle-off text-danger"></i> {{ text_disable }}</button></li>
+            <li><button type="submit" form="form-template" formaction="{{ enable }}" class="dropdown-item"><i class="fa-solid fa-toggle-on text-success"></i> {{ text_enable }}</button></li>
+            <li><button type="submit" form="form-template" formaction="{{ disable }}" class="dropdown-item"><i class="fa-solid fa-toggle-off text-danger"></i> {{ text_disable }}</button></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><button type="submit" form="form-theme" formaction="{{ delete }}" onclick="return confirm('{{ text_confirm }}');" class="dropdown-item"><i class="fa-regular fa-trash-can text-danger"></i> {{ text_delete }}</button></li>
+            <li><button type="submit" form="form-template" formaction="{{ delete }}" onclick="return confirm('{{ text_confirm }}');" class="dropdown-item"><i class="fa-regular fa-trash-can text-danger"></i> {{ text_delete }}</button></li>
           </ul>
         </div>
       </div>
@@ -27,7 +27,7 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div id="filter-theme" class="col-lg-3 col-md-12 order-lg-last d-none d-lg-block mb-3">
+      <div id="filter-template" class="col-lg-3 col-md-12 order-lg-last d-none d-lg-block mb-3">
         <div class="card">
           <div class="card-header"><i class="fa-solid fa-filter"></i> {{ text_filter }}</div>
           <div class="card-body">
@@ -72,9 +72,9 @@ $('#form-filter').on('submit', function(e) {
 
     let url = $(this).serialize();
 
-    window.history.pushState({}, null, 'index.php?route=design/theme&user_token={{ user_token }}&' + url);
+    window.history.pushState({}, null, 'index.php?route=design/template&user_token={{ user_token }}&' + url);
 
-    $('#list').load('index.php?route=design/theme.list&user_token={{ user_token }}&' + url);
+    $('#list').load('index.php?route=design/template.list&user_token={{ user_token }}&' + url);
 });
 //--></script>
 {{ footer }}
