--- a/upload/admin/view/template/catalog/attribute_form.twig
+++ b/upload/admin/view/template/catalog/attribute_form.twig
@@ -75,7 +75,8 @@
               </tfoot>
             </table>
           </fieldset>
-          <input type="hidden" name="attribute_id" value="{{ attribute_id }}" id="input-attribute-id"/> <input type="hidden" name="user_token" value="{{ user_token }}" id="input-user-token"/>
+          <input type="hidden" name="attribute_id" value="{{ attribute_id }}" id="input-attribute-id"/>
+          <input type="hidden" name="user_token" value="{{ user_token }}" id="input-user-token"/>
         </form>
       </div>
     </div>
