--- a/upload/admin/view/template/customer/customer_group_form.twig
+++ b/upload/admin/view/template/customer/customer_group_form.twig
@@ -30,17 +30,17 @@
               {% endfor %}
             </div>
           </div>
-          {% for language in languages %}
-            <div class="row mb-3">
-              <label for="input-description-{{ language.language_id }}" class="col-sm-2 col-form-label">{{ entry_description }}</label>
-              <div class="col-sm-10">
+          <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">{{ entry_description }}</label>
+            <div class="col-sm-10">
+              {% for language in languages %}
                 <div class="input-group">
                   <div class="input-group-text"><img src="{{ language.image }}" title="{{ language.name }}"/></div>
                   <textarea name="customer_group_description[{{ language.language_id }}][description]" rows="5" placeholder="{{ entry_description }}" id="input-description-{{ language.language_id }}" class="form-control">{{ customer_group_description[language.language_id] ? customer_group_description[language.language_id].description }}</textarea>
                 </div>
-              </div>
+              {% endfor %}
             </div>
-          {% endfor %}
+          </div>
           <div class="row mb-3">
             <label class="col-sm-2 col-form-label">{{ entry_approval }}</label>
             <div class="col-sm-10">
