--- a/upload/admin/view/template/design/translation_form.twig
+++ b/upload/admin/view/template/design/translation_form.twig
@@ -19,58 +19,67 @@
       <div class="card-header"><i class="fa-solid fa-pencil"></i> {{ text_form }}</div>
       <div class="card-body">
         <form id="form-translation" action="{{ save }}" method="post" data-oc-toggle="ajax">
-          <div class="row mb-3">
-            <label for="input-store" class="col-sm-2 col-form-label">{{ entry_store }}</label>
-            <div class="col-sm-10">
-              <select name="store_id" id="input-store" class="form-select">
-                {% for store in stores %}
-                  <option value="{{ store.store_id }}"{% if store.store_id == store_id %} selected{% endif %}>{{ store.name }}</option>
-                {% endfor %}
-              </select>
+          <fieldset>
+            <legend>{{ text_translation }}</legend>
+            <div class="row mb-3">
+              <label for="input-route" class="col-sm-2 col-form-label">{{ entry_route }}</label>
+              <div class="col-sm-10">
+                <select name="route" id="input-route" class="form-select"></select>
+              </div>
             </div>
-          </div>
-          <div class="row mb-3">
-            <label for="input-language" class="col-sm-2 col-form-label">{{ entry_language }}</label>
-            <div class="col-sm-10">
-              <select name="language_id" id="input-language" class="form-select">
-                {% for language in languages %}
-                  <option value="{{ language.language_id }}"{% if language.language_id == language_id %} selected{% endif %}>{{ language.name }}</option>
-                {% endfor %}
-              </select>
+            <div class="row mb-3">
+              <label for="input-key" class="col-sm-2 col-form-label">{{ entry_key }}</label>
+              <div class="col-sm-10">
+                <select id="input-keys" class="form-select"></select> <input type="text" name="key" value="{{ key }}" placeholder="{{ entry_key }}" id="input-key" class="form-control"/>
+                <div id="error-key" class="invalid-feedback"></div>
+              </div>
             </div>
-          </div>
-          <div class="row mb-3">
-            <label for="input-route" class="col-sm-2 col-form-label">{{ entry_route }}</label>
-            <div class="col-sm-10">
-              <select name="route" id="input-route" class="form-select"></select>
+            <div class="row mb-3">
+              <label class="col-sm-2 col-form-label">{{ entry_status }}</label>
+              <div class="col-sm-10">
+                <x-switch name="status" value="1" checked="{{ status }}" input-id="input-status" input-class="form-switch form-switch-lg"></x-switch>
+              </div>
             </div>
-          </div>
-          <div class="row mb-3">
-            <label for="input-key" class="col-sm-2 col-form-label">{{ entry_key }}</label>
-            <div class="col-sm-10">
-              <select id="input-keys" class="form-select"></select>
-              <input type="text" name="key" value="{{ key }}" placeholder="{{ entry_key }}" id="input-key" class="form-control"/>
-              <div id="error-key" class="invalid-feedback"></div>
+          </fieldset>
+          <fieldset>
+            <legend>{{ text_translation_add }}</legend>
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>{{ entry_store }}</th>
+                    <th>{{ entry_language }}</th>
+                    <th>{{ entry_default }}</th>
+                    <th>{{ entry_value }}</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><select name="store_id" id="input-store" class="form-select">
+                        {% for store in stores %}
+                          <option value="{{ store.store_id }}"{% if store.store_id == store_id %} selected{% endif %}>{{ store.name }}</option>
+                        {% endfor %}
+                      </select></td>
+                    <td><select name="language_id" id="input-language" class="form-select">
+                        {% for language in languages %}
+                          <option value="{{ language.language_id }}"{% if language.language_id == language_id %} selected{% endif %}>{{ language.name }}</option>
+                        {% endfor %}
+                      </select></td>
+                    <td><textarea name="default" rows="5" placeholder="{{ entry_default }}" id="input-default" class="form-control" disabled="disabled">{% if default %}{{ default }}{% endif %}</textarea></td>
+                    <td><textarea name="value" rows="5" placeholder="{{ entry_value }}" id="input-value" class="form-control">{{ value }}</textarea></td>
+                    <td class="text-end"><button type="button" title="{{ button_remove }}" class="btn btn-danger"><i class="fa-solid fa-circle-minus"></i></button></td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="4"></td>
+                    <td class="text-end"><button type="button" form="form-translation" title="{{ button_translation_add }}" class="btn btn-primary"><i class="fa-solid fa-plus-circle"></i></button></td>
+                  </tr>
+                </tfoot>
+              </table>
             </div>
-          </div>
-          <div class="row mb-3">
-            <label for="input-default" class="col-sm-2 col-form-label">{{ entry_default }}</label>
-            <div class="col-sm-10">
-              <textarea name="default" rows="5" placeholder="{{ entry_default }}" id="input-default" class="form-control" disabled="disabled">{% if default %}{{ default }}{% endif %}</textarea>
-            </div>
-          </div>
-          <div class="row mb-3">
-            <label for="input-value" class="col-sm-2 col-form-label">{{ entry_value }}</label>
-            <div class="col-sm-10">
-              <textarea name="value" rows="5" placeholder="{{ entry_value }}" id="input-value" class="form-control">{{ value }}</textarea>
-            </div>
-          </div>
-          <div class="row mb-3">
-            <label class="col-sm-2 col-form-label">{{ entry_status }}</label>
-            <div class="col-sm-10">
-              <x-switch name="status" value="1" checked="{{ status }}" input-id="input-status" input-class="form-switch form-switch-lg"></x-switch>
-            </div>
-          </div>
+          </fieldset>
           <input type="hidden" name="translation_id" value="{{ translation_id }}" id="input-translation-id"/>
         </form>
       </div>
