--- a/upload/catalog/view/template/account/address_list.twig
+++ b/upload/catalog/view/template/account/address_list.twig
@@ -10,7 +10,8 @@
           <td class="text-end">
 
             <a href="{{ address.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-regular fa-solid fa-pencil"></i></a>
-            <a href="{{ address.delete }}" title="{{ button_delete }}" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></a>
+
+            <button type="button" value="{{ address.address_id }}" on-click="delete" title="{{ button_delete }}" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
 
           </td>
 
