--- a/upload/catalog/view/template/account/edit.twig
+++ b/upload/catalog/view/template/account/edit.twig
@@ -1,10 +1,11 @@
 <template id="account-edit">
   <h1>{{ heading_title }}</h1>
-  <form id="form-customer" action="{{ save }}" method="post">
+
+  <form id="form-customer" action="{{ save }}" data-on-submit="onSubmit">
     <fieldset>
       <legend>{{ text_your_details }}</legend>
       <div class="row mb-3">
-        <label for="input-firstname" class="col-sm-2 col-form-label">{{ entry_firstname }} </label>
+        <label for="input-firstname" class="col-sm-2 col-form-label">{{ entry_firstname }}</label>
         <div class="col-sm-10">
           <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-firstname" class="form-control" required/>
           <div id="error-firstname" class="invalid-feedback"></div>
@@ -157,5 +158,6 @@
         <button type="submit" class="btn btn-primary">{{ button_continue }}</button>
       </div>
     </div>
+
   </form>
 </template>
